<resources>
    <string name="app_name">getraenkeabrechner</string>
    <string name="action_settings">Einstellungen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="last_bookings_label">Letzte Buchungen</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Einstellungen</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_subheader_members">Mitglieder</string>
    <string name="menu_subheader_security">Sicherheit</string>
    <string name="menu_subheader_items">Getränke und Snacks</string>
    <string name="menu_subheader_entries">Buchungen</string>
    <string name="menu_edit">Bearbeiten</string>
    <string name="menu_import">Importieren</string>
    <string name="menu_all_entries">Alle Buchungen</string>
    <string name="menu_export">Exportieren</string>
    <string name="menu_delete_all_bookings">Alle Buchungen löschen</string>
    <string name="menu_cancel">Stornieren</string>
    <string name="menu_change_password">Passwort ändern</string>
    <string name="item_selection_label">Produktauswahl</string>
    <string name="signature_label">Unterschrift</string>
    <string name="menu_back_to_mainpage">Zurück zur Startseite</string>
    <string name="search_members_label">Mitglieder suchen</string>
    <string name="fab_add_member_content_desc">Neues Mitglied hinzufügen</string>
    <string name="add_member_dialog_title">Neues Mitglied hinzufügen</string>
    <string name="add_member_dialog_confirm_label">Bestätigen</string>
    <string name="add_member_dialog_cancel_label">Abbrechen</string>
    <string name="search_entries_label">Buchungen suchen</string>
    <string name="reset_entry_btn_label">Zurücksetzen</string>
    <string name="submit_entry_btn_label">Buchen</string>
    <string name="input_member_name_label">Name</string>
    <string name="name_input_field_error_label">Kein Vereinsmitglied</string>
    <string name="invalid_member_toast">Bitte Vereinsmitglied auswählen</string>
    <string name="submit_success_toast">Buchung erfolgreich</string>
    <string name="signature_pad_label">Bitte mit Stift oder Finger unterschreiben</string>
    <string name="member_surname_input_label">Nachname</string>
    <string name="member_first_name_input_label">Vorname</string>
    <string name="no_signature_toast">Bitte unterschreiben</string>
    <string name="delete_all_entries_alert_title">Alle Buchungen löschen?</string>
    <string name="delete_all_entries_alert_message">Es werden alle Buchungen und Unterschriften gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.</string>
    <string name="delete_all_members_alert_title">Alle Mitglieder löschen?</string>
    <string name="delete_all_members_alert_message">Es werden alle Mitglieder gelöscht. Diese Aktion kann nicht rückgängig gemacht werden.</string>
    <string name="confirm_action_button_label">Bestätigen</string>
    <string name="cancel_action_button_label">Abbrechen</string>
    <string name="entries_date_header_label">Datum</string>
    <string name="entries_item_header_label">Produkt</string>
    <string name="entries_price_header_label">Preis</string>
    <string name="entries_amount_header_label">Anzahl</string>
    <string name="entries_total_header_label">Gesamt</string>
    <string name="entries_name_header_label">Name</string>
    <string name="delete_selection_action_title">Auswahl löschen</string>
    <string name="fab_add_item_content_desc">neues Getränk hinzufügen</string>
    <string name="add_item_category_1_dialog_title">Neues Getränk hinzufügen</string>
    <string name="member_item_name_input_label">Produkt</string>
    <string name="item_price_input_label">Preis</string>
    <string name="submit_failure_toast">Fehler beim Speichern</string>
    <string name="signature_dialog_title">Unterschrift</string>
    <string name="menu_lock_device">Gerät sperren</string>
    <string name="lock_device_alert_title">Gerät sperren?</string>
    <string name="lock_device_alert_message">Es können keine Funktionen mehr außerhalb der App ausgeführt werden.</string>
    <string name="auth_error_toast">Fehler bei Authentifizierung</string>
    <string name="auth_success_toast">Authentifizierung erfolgreich</string>
    <string name="auth_failed_toast">Authentifizierung fehlgeschlagen</string>
    <string name="auth_prompt_title">Authentifizierung erforderlich</string>
    <string name="no_items_selected_toast">Bitte Produkt auswählen</string>
    <string name="menu_delete_all_members">Alle Mitglieder löschen</string>
    <string name="import_members_alert_title">Mitglieder importieren</string>
    <string name="import_members_alert_message">Die Mitgliederliste muss als .csv-Datei im Download Ordner gespeichert sein.\nDie Tabelle muss die Spalten \"vorname\" und \"nachname\" enthalten.\nDas Trennzeichen ist ein Semikolon (\";\").</string>
    <string name="dialog_title_entry_confirmation">Buchung bestätigen</string>
    <string name="add_item_dialog_error_message">Ungültiger Produktname oder Preis</string>
    <string name="delete_item_action_title">Artikel löschen</string>
    <string name="edit_item_dialog_title">Artikel bearbeiten</string>
    <string name="item_category_label_1">Getränke</string>
    <string name="item_category_label_2">Snacks</string>
    <string name="add_item_category_2_dialog_title">Neuen Snack hinzufügen</string>
    <string name="add_item_dialog_max_items_error_message">Es können maximal 6 Produkte in einer Kategorie sein.</string>
    <string name="add_member_dialog_member_exists_toast">Es existiert bereits ein Mitglied unter diesem Namen.</string>
</resources>
