<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/subheader_members"
        android:title="@string/menu_subheader_members">
        <menu>
            <item
                android:id="@+id/nav_members_edit"
                android:icon="@drawable/ic_members"
                android:title="@string/menu_edit"
                android:checkable="true" />
            <item
                android:id="@+id/nav_members_import"
                android:icon="@drawable/ic_import"
                android:title="@string/menu_import"
                android:checkable="true" />
            <item
                android:id="@+id/nav_members_delete_all"
                android:icon="@drawable/ic_delete_all"
                android:title="@string/menu_delete_all_members" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_subheader_entries"
        android:title="@string/menu_subheader_entries">
        <menu>
            <item
                android:id="@+id/nav_entries_show_all"
                android:icon="@drawable/ic_euro"
                android:title="@string/menu_all_entries"
                android:checkable="true" />
            <item
                android:id="@+id/nav_entries_cancel"
                android:icon="@drawable/ic_cancel"
                android:title="@string/menu_cancel" />
            <item
                android:id="@+id/nav_entries_export"
                android:icon="@drawable/ic_export"
                android:title="@string/menu_export" />
            <item
                android:id="@+id/nav_entries_delete_all"
                android:icon="@drawable/ic_delete_all"
                android:title="@string/menu_delete_all_bookings" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_subheader_items"
        android:title="@string/menu_subheader_beverages">
        <menu>
            <item
                android:id="@+id/nav_items_edit"
                android:icon="@drawable/ic_edit"
                android:title="@string/menu_edit"
                android:checkable="true" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_subheader_security"
        android:title="@string/menu_subheader_security">
        <menu>
            <item
                android:id="@+id/nav_password_change"
                android:icon="@drawable/ic_shield"
                android:title="@string/menu_change_password" />

            <item
                android:id="@+id/nav_kiosk_mode"
                android:icon="@drawable/ic_lock"
                android:title="@string/menu_lock_device"
                app:actionLayout="@layout/nav_switch_item"
                app:showAsAction="always" />

            <item
                android:id="@+id/nav_return_to_main"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_back_to_mainpage" />

        </menu>
    </item>

</menu>